Authentication via Discord with Auth0 and some UI tweaks.